web-infras/parser/tests/fixtures/esprima/es2018/for-await-of/invalid-for-await-of-not-async-context/output.txt
[SyntaxError]: 'await' is only allowed within async functions and at the top levels of modules. (1,20)
1|function f() { for await (p of q); }
 |                  ^
